objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>CN_Lead_Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Dead</fullName>
        </values>
        <values>
            <fullName>MKT Qualified</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Sales Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CN_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CN_Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_City__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>City</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Integration</value>
            </filterItems>
            <filterItems>
                <field>$Source.CN_Province__c</field>
                <operation>equals</operation>
                <valueField>CN_City__c.CN_Province__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Lead</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CN_City__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Converted_Contact_Id_From_CR__c</fullName>
        <label>Converted Contact Id From CR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Converted_From_Lead_Id__c</fullName>
        <formula>CASESAFEID(Id )</formula>
        <label>Converted From Lead Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CN</fullName>
                    <default>true</default>
                    <label>CN</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Customer_Category__c</fullName>
        <label>Customer Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BAPA</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Coffee/Tea Shop</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Retailor</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Home Baker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Is_Converted_Display__c</fullName>
        <formula>IsConverted ||  NOT(ISBLANK(CN_Converted_Contact_Id_From_CR__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Converted Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_From_Web_To_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is From Web To Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Province__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Province</label>
        <referenceTo>CN_Province__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Reason_Lead_Dead__c</fullName>
        <label>Reason of lead dead</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_Street__c</fullName>
        <inlineHelpText>Please fill with city and street</inlineHelpText>
        <label>Visit Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Volume_Size_of_Lead__c</fullName>
        <label>Volume(kg)/Size of Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Wechat_ID__c</fullName>
        <label>Wechat ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>CN_Customer_Category__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>CN_Province__c</columns>
        <columns>CN_City__c</columns>
        <columns>CN_Street__c</columns>
        <columns>CN_Zip_Postal_Code__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>CN_All_Dead_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Closed - Dead</value>
        </filters>
        <label>All Dead Leads</label>
        <sharedTo>
            <roleAndSubordinates>CN_China</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>CN_Customer_Category__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>CN_Province__c</columns>
        <columns>CN_City__c</columns>
        <columns>CN_Zip_Postal_Code__c</columns>
        <columns>CN_Street__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.CN_Lead</value>
        </filters>
        <label>All Leads</label>
        <sharedTo>
            <roleAndSubordinates>CN_China</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>CN_Customer_Category__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>CN_Province__c</columns>
        <columns>CN_City__c</columns>
        <columns>CN_Zip_Postal_Code__c</columns>
        <columns>CN_Street__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.CN_Lead</value>
        </filters>
        <label>My Leads</label>
        <sharedTo>
            <roleAndSubordinates>CN_China</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>CN_Lead</fullName>
        <active>true</active>
        <businessProcess>CN_Lead_Process</businessProcess>
        <label>CN Lead</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CN_Check_Change_Status_Backwards</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  NOT(ISNEW()),
  OR(
    AND(ISCHANGED(Status),ISPICKVAL(PRIORVALUE(Status), &quot;MKT Qualified&quot;),ISPICKVAL(Status , &quot;Open&quot;)),
    AND(ISCHANGED(Status),ISPICKVAL(PRIORVALUE(Status), &quot;Assigned&quot;),OR( ISPICKVAL(Status, &quot;MKT Qualified&quot;), ISPICKVAL(Status , &quot;Open&quot;)))
  )
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>It&apos;s not allow to select this status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Close_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
ISCHANGED( Status ) ,
RecordType.DeveloperName = &apos;CN_Lead&apos;,
NOT(IF($Profile.Name= &quot;System Integration&quot;, TRUE, FALSE)),
ISPICKVAL(Status, &quot;Closed - Dead&quot;),
 ISBLANK( CN_Reason_Lead_Dead__c ) 
)</errorConditionFormula>
        <errorDisplayField>CN_Reason_Lead_Dead__c</errorDisplayField>
        <errorMessage>Please input reason when lead closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_First_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 ISBLANK(FirstName )  
)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_MDM_Change_Owner</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  OR($Profile.Name = &quot;CN Sales MDM&quot;,$Profile.Name = &quot;CN CCE Sales MDM&quot;),
 ISCHANGED(OwnerId),
  Owner:User.Profile.Name != &quot;CN Sales&quot;,
  Owner:User.Profile.Name != &quot;CN Sales Manager&quot;,
  Owner:User.Profile.Name != &quot;CN Sales Lead&quot;
)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>Please select Sales Person.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_MDM_Change_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 OR($Profile.Name = &quot;CN Sales MDM&quot;,$Profile.Name = &quot;CN CCE Sales MDM&quot;),
 ISCHANGED(Status ),
 NOT(ISPICKVAL( Status , &quot;MKT Qualified&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>IT&apos;s not allowed to select this status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_MKT_Change_Owner</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 $Permission.CN_Marketing_Lead_Manager,
 ISCHANGED( OwnerId ),
 ISPICKVAL( Status , &quot;Open&quot;)
)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>It&apos;s not allow to change owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_MKT_Change_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  $Permission.CN_Marketing_Lead_Manager,
  NOT( AND(ISPICKVAL(PRIORVALUE(Status), &quot;Open&quot;),ISPICKVAL( Status , &quot;Closed - Dead&quot;)) ),
  OR(
    NOT(ISNEW()) &amp;&amp; ISCHANGED(Status) &amp;&amp; NOT(ISPICKVAL( Status , &quot;MKT Qualified&quot;) ) &amp;&amp; NOT(ISPICKVAL( Status , &quot;Open&quot;) ),
    ISNEW() &amp;&amp; NOT(ISPICKVAL( Status , &quot;MKT Qualified&quot;)) &amp;&amp; NOT(ISPICKVAL( Status , &quot;Open&quot;) )
  )
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>It&apos;s not allow to select this status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_MobilePhone_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(ISBLANK( MobilePhone )),
RecordType.DeveloperName = &apos;CN_Lead&apos;,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
NOT(OR(REGEX( MobilePhone , &apos;1\\d{10}&apos;),REGEX(MobilePhone ,&apos;\\d{3,4}-\\d{8}(-\\d{2,5})?&apos; )))
)</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Phone_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(ISBLANK(  Phone )),
RecordType.DeveloperName = &apos;CN_Lead&apos;,
NOT(IF($Profile.Name= &quot;System Integration&quot;, TRUE, FALSE)),
NOT(OR(REGEX( Phone , &apos;1\\d{10}&apos;),REGEX(Phone ,&apos;\\d{3,4}-\\d{8}(-\\d{2,5})?&apos; )))
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Post_Code_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
RecordType.DeveloperName = &apos;CN_Lead&apos;,
NOT(ISBLANK( CN_Zip_Postal_Code__c ) ),
NOT(REGEX(CN_Zip_Postal_Code__c, &quot;\\d{6}&quot;) )
)</errorConditionFormula>
        <errorDisplayField>CN_Zip_Postal_Code__c</errorDisplayField>
        <errorMessage>Postal code must be six digits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Sales_Change_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
NOT(ISNEW()),
ISCHANGED(Status ),
OR(
ISPICKVAL( Status , &quot;Open&quot;),
ISPICKVAL( Status , &quot;MKT Qualified&quot;),
ISPICKVAL( Status , &quot;Assigned&quot;)
),
OR(
$Profile.Name = &apos;CN Sales&apos;,
$Profile.Name = &apos;CN Sales Manager&apos;,
$Profile.Name = &apos;CN Sales Lead&apos;
)
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>It&apos;s not allow to select previous status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Sales_Create_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 ISNEW(),
 NOT(ISPICKVAL( Status , &quot;Open&quot;)),
 OR(
   $Profile.Name = &apos;CN Sales&apos;,
   $Profile.Name = &apos;CN Sales Manager&apos;,
   $Profile.Name = &apos;CN Sales Lead&apos;
 )
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Please keep Lead status as open</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Edit_New_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
(ISPICKVAL( PRIORVALUE(Status ) , &quot;Closed - Converted&quot;) || ISPICKVAL(Status , &quot;Closed - Converted&quot;)),
 NOT(ISBLANK( CN_Converted_Contact_Id_From_CR__c )),
 NOT(ISCHANGED(CN_Converted_Contact_Id_From_CR__c ))
)</errorConditionFormula>
        <errorMessage>This Lead had been converted into contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Eidt_When_Dead</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
OR(
 ISCHANGED(Status ) &amp;&amp; ISPICKVAL( PRIORVALUE(Status) , &quot;Closed - Dead&quot;) ,
 NOT(ISCHANGED(Status )) &amp;&amp; ISPICKVAL( Status , &quot;Closed - Dead&quot;) 
)
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>It&apos;s not allow to edit after lead dead.</errorMessage>
    </validationRules>
</CustomObject>